# pip-plugin-example

./: Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/pip_plugin_example/: __init__.py
test/: test_init.py
